--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "d3-ease": "^1.0.3",
+    "debounce": "^1.2.0",
     "firebase": "^5.0.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
